# Aetheris-MemOS

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README.zh.md  SECURITY.md  docker-compose.yml
backend/: .cursorrules  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  docker-entrypoint.sh  docker.toml  seed_data.sql  seed_data_extended.sql
backend/.sqlx/: query-03936f5ddf58905b3884d21642be7fc46cd149f25a504decec5521c0febdeb3d.json  query-0a0cf948d3f964f21b2dabf7446726763155cd4f45d1610e1cd381c676141c35.json  query-5753facbfe360b45382020bc9635fe08e16e6ff14cb4f4ba7d6bf50cbb87d3f9.json  query-58374a9badd2499a95dc1004b074165af25adb46bd1034237a15d37528389e31.json  query-5ab997c4c718ae736a19f9b747392d06912c051f371f3ebb2ec8a38b1ff274c3.json  query-720b5c794f86979f3c6178dc42ae55fb3bb315592cff5689f8d845fdf4f94564.json  query-b69a6f42965b3e7103fcbf46e39528466926789ff31e9ed2591bb175527ec169.json
backend/data/: seed_all.sql  test_kg.sql  test_ltm.sql  test_stm.sql
backend/docs/: README_会话历史集成.md  conversation_history_integration.md  dashboard_api.md  会话历史集成指南.md
backend/examples/: README_test_memory_search.md  conversation_history_example.rs  hash_password.rs  memory_demo.rs  test_memory_search.rs
backend/migrations/: 20231001143156_users.sql  20240101000001_init.sql  20240101000002_short_term_memory.sql  20240101000003_long_term_memory.sql  20240101000004_knowledge_graph.sql  20240101000005_multimodal_memory.sql  20240101000006_memory_management.sql  20240101000007_weight_history.sql  20240101000008_add_default_admin_user.sql  20240101000009_decision_trace.sql  20240101000010_weight_history_strategy_metadata.sql  20240101000011_agent_identity.sql  20240101000012_bi_temporal_tracking.sql  20260326000100_workflow_evidence_graph.sql  20260326000200_memory_feedback.sql
backend/migrations_sqlite/: 20260326000100_workflow_evidence_graph.sql  20260326000200_memory_feedback.sql
backend/scripts/: check_services.sh  memory_demo.sh
backend/src/: error.rs  lib.rs  main.rs
backend/src/agent/: compressor.rs  forgetter.rs  memory_agent.rs  merger.rs  mod.rs
backend/src/axum_routers/: agent.rs  auth.rs  demo.rs  distributed.rs  knowledge_graph.rs  memory.rs  memory_search.rs  memory_storage.rs  mod.rs  multimodal.rs  protected.rs  user.rs
backend/src/config/: db_config.rs  embedding_config.rs  llm_config.rs  log_config.rs  mod.rs  neo4j_config.rs  qdrant_config.rs  rerank_config.rs  storage.rs
backend/src/db/: agent.rs  decision_trace.rs  event_store.rs  evidence_graph.rs  kg.rs  ltm.rs  memory.rs  memory_feedback.rs  mm.rs  mod.rs  neo4j.rs  performance.rs  stm.rs  weights.rs  workflow_lifecycle.rs
backend/src/distributed/: consensus.rs  epoch_manager.rs  interrupt_propagator.rs  lease_coordinator.rs  mod.rs  node.rs  replication.rs  sharding.rs  signaling_bus.rs
backend/src/hoops/: cors.rs  enterprise.rs  enterprise_impl.rs  (+5 more)
backend/tests/: epoch_interrupt.rs  evidence_api.rs  evidence_graph.rs  hash_chain.rs  hitl_approval.rs  input_validation.rs  live_router_mvp.rs  mcp_sandbox.rs  mcp_signing.rs  memory_fusion.rs  memory_platform_e2e.rs  otel_integration.rs  planner_sandbox.rs  prompt_injection_probe.rs  self_healing.rs  signaling_bus.rs  snapshot_export.rs  tenant_isolation.rs
backend/views/: hello.html  login.html  user_list_page.html
sdks/python/: README.md  pyproject.toml  setup.py
sdks/rust/: Cargo.toml  README.md
(+373 files in other folders)
