[package]
name = "backend"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
readme = "./README.md"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
figment = { version = "0.10", features = ["env", "toml"] }
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
rust-embed = "8"
serde = "1"
thiserror = "2"
time = "0.3"
tokio = {version = "1", features = ["full"]}
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
utoipa = "5"
utoipa-scalar = { version = "0.3", features = ["axum"] }
validator = {version = "0.20", features = ["derive"]}
ulid = "1"
argon2 = "0.5"
cookie = "0.18"
dotenvy = "0.15"
tracing-appender ="0.2"
tracing-subscriber = {version = "0.3", features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres", "migrate"]}
serde_json = "1"
rinja = "0.3"
rand = "0.9"
once_cell = "1.19"
langchain-rust = { git = "https://github.com/Abraxas-365/langchain-rust", features = ["ollama"] }
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = "1.7"
sysinfo = "0.29"
chrono = "0.4"
moka = { version = "0.11", features = ["future"] }
neo4rs = "0.8"
async-trait = "0.1"
base64 = "0.22"