[package]
name = "adaptive-memory"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Adaptive Memory System"
license = "MIT"
authors = ["Adaptive Memory Team <team@adaptive-memory.dev>"]
repository = "https://github.com/Colin4k1024/adaptive-memory-system"
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
